[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/CustomNodes/NoiseInterface/NoiseInterface.gd" type="Script" id=1]
[ext_resource path="res://GUI/CustomNodes/Classes/NumberEdit.gd" type="Script" id=2]
[ext_resource path="res://GUI/CustomNodes/Classes/HSlideAndSpin.tscn" type="PackedScene" id=4]

[node name="NoiseInterface" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1600.0
margin_bottom = 14.0
text = "Noise"
align = 1

[node name="Resolution" type="HBoxContainer" parent="."]
margin_top = 22.0
margin_right = 1600.0
margin_bottom = 42.0
alignment = 1

[node name="Label" type="Label" parent="Resolution"]
margin_left = 688.0
margin_top = 3.0
margin_right = 788.0
margin_bottom = 17.0
rect_min_size = Vector2( 100, 0 )
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="Resolution"]
margin_left = 792.0
margin_right = 912.0
margin_bottom = 20.0
rect_min_size = Vector2( 120, 0 )
text = "Low"
items = [ "Low", null, false, 0, null, "Medium", null, false, 1, null, "High", null, false, 2, null, "Very High", null, false, 3, null ]
selected = 0

[node name="Seed" type="HBoxContainer" parent="."]
margin_top = 50.0
margin_right = 1600.0
margin_bottom = 74.0
alignment = 1

[node name="Label" type="Label" parent="Seed"]
margin_left = 654.0
margin_top = 5.0
margin_right = 754.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Seed"

[node name="NumberEdit" type="LineEdit" parent="Seed"]
margin_left = 758.0
margin_right = 878.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
script = ExtResource( 2 )

[node name="Random" type="Button" parent="Seed"]
margin_left = 882.0
margin_right = 946.0
margin_bottom = 24.0
text = "Random"

[node name="Octaves" parent="." instance=ExtResource( 4 )]
margin_top = 82.0
margin_bottom = 106.0
title = "Octaves"
value = 9.0
max_value = 9.0
min_value = 1.0
step = 1.0

[node name="Period" parent="." instance=ExtResource( 4 )]
margin_top = 114.0
margin_bottom = 138.0
title = "Period"
value = 0.1
max_value = 256.0
min_value = 0.1
step = 0.01

[node name="Persistence" parent="." instance=ExtResource( 4 )]
margin_top = 146.0
margin_bottom = 170.0
title = "Persistence"
max_value = 1.0
step = 0.001

[node name="Lacunarity" parent="." instance=ExtResource( 4 )]
margin_top = 178.0
margin_bottom = 202.0
title = "Lacunarity"
value = 2.0
max_value = 4.0
min_value = 0.1
step = 0.001

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 210.0
margin_right = 1600.0
margin_bottom = 410.0
rect_min_size = Vector2( 0, 200 )
expand = true
stretch_mode = 6

[connection signal="item_selected" from="Resolution/Resolution" to="." method="_on_Resolution_item_selected"]
[connection signal="text_entered" from="Seed/NumberEdit" to="." method="_on_NumberEdit_text_entered"]
[connection signal="pressed" from="Seed/Random" to="." method="_on_Random_pressed"]
[connection signal="value_changed" from="Octaves" to="." method="_on_Octaves_value_changed"]
[connection signal="value_changed" from="Period" to="." method="_on_Period_value_changed"]
[connection signal="value_changed" from="Persistence" to="." method="_on_Persistence_value_changed"]
[connection signal="value_changed" from="Lacunarity" to="." method="_on_Lacunarity_value_changed"]
